--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "weather-app": "file:"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
